修复在其他页面无法导航到首页的问题

--- a/android-studio.html
+++ b/android-studio.html
@@ -37,106 +37,106 @@
                 <li class="nav-item dropdown mx-4">
                     <a id="drop-sdk-tools" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span>Android SDK 工具</span></a>
                     <div id="menu-sdl-tools" class="dropdown-menu" role="menu" aria-labelledby="drop-sdk-tools">
-                        <a class="dropdown-item" href="index.html#android-studio">Android Studio</a>
-                        <a class="dropdown-item" href="index.html#sdk-tools">SDK Tools</a>
-                        <a class="dropdown-item" href="index.html#sdk-platform-tools">Platform-tools</a>
-                        <a class="dropdown-item" href="index.html#build-tools">Build Tools</a>
-                        <a class="dropdown-item" href="index.html#sdk-list">SDK</a>
-                        <a class="dropdown-item" href="index.html#ndk">NDK</a>
-                        <a class="dropdown-item" href="index.html#jdk">JDK</a>
-                        <a class="dropdown-item" href="index.html#adt-bundle">ADT Bundle</a>
-                        <a class="dropdown-item" href="index.html#adt-plugin">ADT Plugin</a>
-                        <a class="dropdown-item" href="index.html#sdk-system-images">SDK System images</a>
-                        <a class="dropdown-item" href="index.html#googlemap-apis-sdk">GoogleMap APIs SDK</a>
-                        <a class="dropdown-item" href="index.html#google-glass-sdk">Google Glass SDK</a>
-                        <a class="dropdown-item" href="index.html#google-tv-addon">Google TV Addon</a>
-                        <a class="dropdown-item" href="index.html#android-sdk-extras">Android SDK Extras</a>
-                        <a class="dropdown-item" href="index.html#support-library">Support Library</a>
-                        <a class="dropdown-item" href="index.html#sdk-samples">SDK Samples</a>
-                        <a class="dropdown-item" href="index.html#android-framework-source-code">Android Framework Source Code</a>
-                        <a class="dropdown-item" href="index.html#android-system-image">Android System Image</a>
+                        <a class="dropdown-item" href="index.html?id=android-studio">Android Studio</a>
+                        <a class="dropdown-item" href="index.html?id=sdk-tools">SDK Tools</a>
+                        <a class="dropdown-item" href="index.html?id=sdk-platform-tools">Platform-tools</a>
+                        <a class="dropdown-item" href="index.html?id=build-tools">Build Tools</a>
+                        <a class="dropdown-item" href="index.html?id=sdk-list">SDK</a>
+                        <a class="dropdown-item" href="index.html?id=ndk">NDK</a>
+                        <a class="dropdown-item" href="index.html?id=jdk">JDK</a>
+                        <a class="dropdown-item" href="index.html?id=adt-bundle">ADT Bundle</a>
+                        <a class="dropdown-item" href="index.html?id=adt-plugin">ADT Plugin</a>
+                        <a class="dropdown-item" href="index.html?id=sdk-system-images">SDK System images</a>
+                        <a class="dropdown-item" href="index.html?id=googlemap-apis-sdk">GoogleMap APIs SDK</a>
+                        <a class="dropdown-item" href="index.html?id=google-glass-sdk">Google Glass SDK</a>
+                        <a class="dropdown-item" href="index.html?id=google-tv-addon">Google TV Addon</a>
+                        <a class="dropdown-item" href="index.html?id=android-sdk-extras">Android SDK Extras</a>
+                        <a class="dropdown-item" href="index.html?id=support-library">Support Library</a>
+                        <a class="dropdown-item" href="index.html?id=sdk-samples">SDK Samples</a>
+                        <a class="dropdown-item" href="index.html?id=android-framework-source-code">Android Framework Source Code</a>
+                        <a class="dropdown-item" href="index.html?id=android-system-image">Android System Image</a>
                     </div>
                 </li>
                 <!--  Android Dev Tools -->
                 <li class="nav-item dropdown mx-4">
                     <a id="drop-dev-tools" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Android 开发工具</a>
                     <div id="menu-dev-tool" class="dropdown-menu" role="menu" aria-labelledby="drop-dev-tools">
-                        <a class="dropdown-item" href="index.html#gradle">Gradle</a>
-                        <a class="dropdown-item" href="index.html#version-control-tools">版本控制工具</a>
-                        <a class="dropdown-item" href="index.html#apk-decompile-tools">Apk反编译工具</a>
-                        <a class="dropdown-item" href="index.html#security-tools">安全工具</a>
-                        <a class="dropdown-item" href="index.html#static-code-analysis-tools">静态代码分析工具</a>
-                        <a class="dropdown-item" href="index.html#search-tools">搜索工具</a>
-                        <a class="dropdown-item" href="index.html#debug-tools">Debug调试工具</a>
-                        <a class="dropdown-item" href="index.html#api-test-tools">Api测试工具</a>
-                        <a class="dropdown-item" href="index.html#eclipse-android-studio-idea-plugin">IDE插件</a>
-                        <a class="dropdown-item" href="index.html#android-res-themes-style-generator-tools">Themes/Style生成工具</a>
-                        <a class="dropdown-item" href="index.html#android-res-analysis-tools">资源分析工具</a>
-                        <a class="dropdown-item" href="index.html#android-layout-parser-tools">Layout Parser工具</a>
-                        <a class="dropdown-item" href="index.html#android-content-provider-generator-tools">Content Provider代码生成工具</a>
-                        <a class="dropdown-item" href="index.html#android-fragment-code-generator-tools">Fragment代码生成工具</a>
-                        <a class="dropdown-item" href="index.html#android-code-generator-tools">代码生成工具</a>
-                        <a class="dropdown-item" href="index.html#android-native-dev-tools">Native开发工具</a>
-                        <a class="dropdown-item" href="index.html#android-test-tools">测试工具</a>
-                        <a class="dropdown-item" href="index.html#multi-channel-apk-genterator-tools">Apk多渠道打包工具</a>
-                        <a class="dropdown-item" href="index.html#android-log-collection-tools">日志收集工具</a>
-                        <a class="dropdown-item" href="index.html#android-other-language-dev-tools">其他语言开发Android应用工具</a>
-                        <a class="dropdown-item" href="index.html#adroid-sensors-simulate-tools">传感器模拟工具</a>
-                        <a class="dropdown-item" href="index.html#android-serial-dev-tools">串口开发工具</a>
-                        <a class="dropdown-item" href="index.html#img-size-handle-tools">图片尺寸处理工具</a>
-                        <a class="dropdown-item" href="index.html#img-compress-tools">图片压缩工具</a>
-                        <a class="dropdown-item" href="index.html#android-res-clean-tools">资源清理工具</a>
-                        <a class="dropdown-item" href="index.html#px-to-dp-convert-tools">px和dp转换/计算工具</a>
-                        <a class="dropdown-item" href="index.html#java-to-ios">Java To iOS</a>
-                        <a class="dropdown-item" href="index.html#json-xml-to-pojo-class-tools">JSON/XML转换为POJO Class工具</a>
-                        <a class="dropdown-item" href="index.html#java-dao-generate-tools">Java DAO Generate工具</a>
+                        <a class="dropdown-item" href="index.html?id=gradle">Gradle</a>
+                        <a class="dropdown-item" href="index.html?id=version-control-tools">版本控制工具</a>
+                        <a class="dropdown-item" href="index.html?id=apk-decompile-tools">Apk反编译工具</a>
+                        <a class="dropdown-item" href="index.html?id=security-tools">安全工具</a>
+                        <a class="dropdown-item" href="index.html?id=static-code-analysis-tools">静态代码分析工具</a>
+                        <a class="dropdown-item" href="index.html?id=search-tools">搜索工具</a>
+                        <a class="dropdown-item" href="index.html?id=debug-tools">Debug调试工具</a>
+                        <a class="dropdown-item" href="index.html?id=api-test-tools">Api测试工具</a>
+                        <a class="dropdown-item" href="index.html?id=eclipse-android-studio-idea-plugin">IDE插件</a>
+                        <a class="dropdown-item" href="index.html?id=android-res-themes-style-generator-tools">Themes/Style生成工具</a>
+                        <a class="dropdown-item" href="index.html?id=android-res-analysis-tools">资源分析工具</a>
+                        <a class="dropdown-item" href="index.html?id=android-layout-parser-tools">Layout Parser工具</a>
+                        <a class="dropdown-item" href="index.html?id=android-content-provider-generator-tools">Content Provider代码生成工具</a>
+                        <a class="dropdown-item" href="index.html?id=android-fragment-code-generator-tools">Fragment代码生成工具</a>
+                        <a class="dropdown-item" href="index.html?id=android-code-generator-tools">代码生成工具</a>
+                        <a class="dropdown-item" href="index.html?id=android-native-dev-tools">Native开发工具</a>
+                        <a class="dropdown-item" href="index.html?id=android-test-tools">测试工具</a>
+                        <a class="dropdown-item" href="index.html?id=multi-channel-apk-genterator-tools">Apk多渠道打包工具</a>
+                        <a class="dropdown-item" href="index.html?id=android-log-collection-tools">日志收集工具</a>
+                        <a class="dropdown-item" href="index.html?id=android-other-language-dev-tools">其他语言开发Android应用工具</a>
+                        <a class="dropdown-item" href="index.html?id=adroid-sensors-simulate-tools">传感器模拟工具</a>
+                        <a class="dropdown-item" href="index.html?id=android-serial-dev-tools">串口开发工具</a>
+                        <a class="dropdown-item" href="index.html?id=img-size-handle-tools">图片尺寸处理工具</a>
+                        <a class="dropdown-item" href="index.html?id=img-compress-tools">图片压缩工具</a>
+                        <a class="dropdown-item" href="index.html?id=android-res-clean-tools">资源清理工具</a>
+                        <a class="dropdown-item" href="index.html?id=px-to-dp-convert-tools">px和dp转换/计算工具</a>
+                        <a class="dropdown-item" href="index.html?id=java-to-ios">Java To iOS</a>
+                        <a class="dropdown-item" href="index.html?id=json-xml-to-pojo-class-tools">JSON/XML转换为POJO Class工具</a>
+                        <a class="dropdown-item" href="index.html?id=java-dao-generate-tools">Java DAO Generate工具</a>
                     </div>
                 </li>
                 <!--  Android Dev Guides    -->
                 <li class="nav-item dropdown mx-4">
                     <a id="drop-dev-guides" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">指南</a>
                     <div id="menu-dev-guides" class="dropdown-menu" role="menu" aria-labelledby="drop-dev-guides">
-                        <a class="dropdown-item" href="index.html#android-dev-docs">Android 开发文档</a>
-                        <a class="dropdown-item" href="index.html#google-java-program-guide-cn">Google Java编程风格指南中文版</a>
-                        <a class="dropdown-item" href="index.html#android-api-doc-cn">Android Api中文版</a>
-                        <a class="dropdown-item" href="index.html#android-api-guide-cn">Android API指南中文版</a>
-                        <a class="dropdown-item" href="index.html#proguard-config-guide">Proguard混淆配置指南</a>
-                        <a class="dropdown-item" href="index.html#gradle-plugin-guide-cn">Gradle插件使用指南中文版</a>
-                        <a class="dropdown-item" href="index.html#gradle-user-guide">Gradle User Guide</a>
+                        <a class="dropdown-item" href="index.html?id=android-dev-docs">Android 开发文档</a>
+                        <a class="dropdown-item" href="index.html?id=google-java-program-guide-cn">Google Java编程风格指南中文版</a>
+                        <a class="dropdown-item" href="index.html?id=android-api-doc-cn">Android Api中文版</a>
+                        <a class="dropdown-item" href="index.html?id=android-api-guide-cn">Android API指南中文版</a>
+                        <a class="dropdown-item" href="index.html?id=proguard-config-guide">Proguard混淆配置指南</a>
+                        <a class="dropdown-item" href="index.html?id=gradle-plugin-guide-cn">Gradle插件使用指南中文版</a>
+                        <a class="dropdown-item" href="index.html?id=gradle-user-guide">Gradle User Guide</a>
                     </div>
                 </li>
                 <!--  Android Dev Tutorials -->
                 <li class="nav-item dropdown mx-4">
                     <a id="drop-dev-tutorials" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">教程</a>
                     <div id="menu3" class="dropdown-menu" role="menu" aria-labelledby="drop-dev-tutorials">
-                        <a class="dropdown-item" href="index.html#android-learning-way">Android学习之路</a>
-                        <a class="dropdown-item" href="index.html#google-androidtraining-tutorials">Android官方培训课程中文版</a>
-                        <a class="dropdown-item" href="index.html#developing-android-apps">Developing Android Apps</a>
-                        <a class="dropdown-item" href="index.html#java-design-patterns-samples-in-java">Java Design Patterns Samples</a>
+                        <a class="dropdown-item" href="index.html?id=android-learning-way">Android学习之路</a>
+                        <a class="dropdown-item" href="index.html?id=google-androidtraining-tutorials">Android官方培训课程中文版</a>
+                        <a class="dropdown-item" href="index.html?id=developing-android-apps">Developing Android Apps</a>
+                        <a class="dropdown-item" href="index.html?id=java-design-patterns-samples-in-java">Java Design Patterns Samples</a>
                     </div>
                 </li>
                 <!--  Design Tools  -->
                 <li class="nav-item dropdown mx-4">
                     <a id="drop-design-tools" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">设计工具</a>
                     <div id="menu4" class="dropdown-menu" role="menu" aria-labelledby="drop-design-tools">
-                        <a class="dropdown-item" href="index.html#photoshop-plugin">Photoshop插件</a>
-                        <a class="dropdown-item" href="index.html#vector-img-design-tools">矢量图设计工具</a>
-                        <a class="dropdown-item" href="index.html#ui-icon-export-ools">切图工具</a>
-                        <a class="dropdown-item" href="index.html#desgin-size-mark-tools">设计稿尺寸标注工具</a>
-                        <a class="dropdown-item" href="index.html#prototype-design-tools">原型设计工具</a>
-                        <a class="dropdown-item" href="index.html#interaction-desgin-tools">交互设计工具</a>
-                        <a class="dropdown-item" href="index.html#ui-effect-preview-tools">UI效果预览工具</a>
-                        <a class="dropdown-item" href="index.html#harmonize-colors-tools">配色工具</a>
-                        <a class="dropdown-item" href="index.html#design-cvs-tools">设计稿版本控制工具</a>
-                        <a class="dropdown-item" href="index.html#icon-handle-tools">图标处理工具</a>
-                        <a class="dropdown-item" href="index.html#online-icon-library">在线Icon库</a>
-                        <a class="dropdown-item" href="index.html#take-color-tools">取色工具</a>
-                        <a class="dropdown-item" href="index.html#hex-opacity-list">不透明度16进制值</a>
-                        <a class="dropdown-item" href="index.html#phone-to-computer-preview-tools">同步预览工具</a>
-                        <a class="dropdown-item" href="index.html#gif-record-tools">Gif图片录制工具</a>
-                        <a class="dropdown-item" href="index.html#design-tutorials">Design Tutorials</a>
-                        <a class="dropdown-item" href="index.html#design-guides">Design Guides</a>
-                        <a class="dropdown-item" href="index.html#free-design-resources">Design Resources</a>
+                        <a class="dropdown-item" href="index.html?id=photoshop-plugin">Photoshop插件</a>
+                        <a class="dropdown-item" href="index.html?id=vector-img-design-tools">矢量图设计工具</a>
+                        <a class="dropdown-item" href="index.html?id=ui-icon-export-ools">切图工具</a>
+                        <a class="dropdown-item" href="index.html?id=desgin-size-mark-tools">设计稿尺寸标注工具</a>
+                        <a class="dropdown-item" href="index.html?id=prototype-design-tools">原型设计工具</a>
+                        <a class="dropdown-item" href="index.html?id=interaction-desgin-tools">交互设计工具</a>
+                        <a class="dropdown-item" href="index.html?id=ui-effect-preview-tools">UI效果预览工具</a>
+                        <a class="dropdown-item" href="index.html?id=harmonize-colors-tools">配色工具</a>
+                        <a class="dropdown-item" href="index.html?id=design-cvs-tools">设计稿版本控制工具</a>
+                        <a class="dropdown-item" href="index.html?id=icon-handle-tools">图标处理工具</a>
+                        <a class="dropdown-item" href="index.html?id=online-icon-library">在线Icon库</a>
+                        <a class="dropdown-item" href="index.html?id=take-color-tools">取色工具</a>
+                        <a class="dropdown-item" href="index.html?id=hex-opacity-list">不透明度16进制值</a>
+                        <a class="dropdown-item" href="index.html?id=phone-to-computer-preview-tools">同步预览工具</a>
+                        <a class="dropdown-item" href="index.html?id=gif-record-tools">Gif图片录制工具</a>
+                        <a class="dropdown-item" href="index.html?id=design-tutorials">Design Tutorials</a>
+                        <a class="dropdown-item" href="index.html?id=design-guides">Design Guides</a>
+                        <a class="dropdown-item" href="index.html?id=free-design-resources">Design Resources</a>
                     </div>
                 </li>
                 <li class="nav-item mx-4"><a class="nav-link new-tag animate__animated animate__pulse animate__infinite" id="aihunt" href="https://aihunt.one">AI 工具</a></li>
@@ -144,8 +144,8 @@
                 <li class="nav-item dropdown mx-4">
                     <a id="drop-more" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">更多</a>
                     <div id="menu5" class="dropdown-menu" role="menu" aria-labelledby="drop-more">
-                        <a class="dropdown-item" href="index.html#books-list" target="_blank">书</a>
-                        <a class="dropdown-item" href="index.html#fuck-gfw-list" target="_blank">福利</a>
+                        <a class="dropdown-item" href="index.html?id=books-list" target="_blank">书</a>
+                        <a class="dropdown-item" href="index.html?id=fuck-gfw-list" target="_blank">福利</a>
                         <a class="dropdown-item" href="friends.html" id="friends">好朋友们</a>
                         <a class="dropdown-item" href="https://github.com/inferjay/AndroidDevTools" data-title="View GitHub Project"><img width="16px" src="https://github.githubassets.com/favicons/favicon.svg" alt="GitHub" /> GitHub</a>
                     </div>
