调整轮播banner指示点颜色

--- a/index.html
+++ b/index.html
@@ -186,6 +186,22 @@
                         <img src="https://p.ipic.vip/reabw0.jpg">
                     </a>
                 </div>
+                <div class="swiper-slide">
+                    <div class="ads-container">
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5517858206486320"
+                            crossorigin="anonymous"></script>
+                        <!-- AndroidDevTools -->
+                        <ins class="adsbygoogle"
+                            style="display:block"
+                            data-ad-client="ca-pub-5517858206486320"
+                            data-ad-slot="5790477697"
+                            data-ad-format="auto"
+                            data-full-width-responsive="true"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+                    </div>
+                </div>
             </div>
             <!-- If we need navigation buttons -->
             <div class="swiper-button-prev"></div>
@@ -201,6 +217,7 @@
             .swiper-container {
                 margin-top: 20px;
                 border-radius: 6px;
+                background-color: white;
             }
 
             .swiper-slide img {
@@ -214,7 +231,8 @@
             .swiper-pagination-bullet {
                 width: 12px;
                 height: 12px;
-                background: white;
+                background: gray;
+                opacity: 0.6;
             }
             .swiper-pagination-bullet-active {
                 background: var(--swiper-theme-color);
