添加首页banner广告代码

--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@
                     <div class="ads-container">
                         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5517858206486320"
                             crossorigin="anonymous"></script>
-                        <!-- AndroidDevTools -->
+                        <!-- AndroidDevTools 首页 Banner -->
                         <ins class="adsbygoogle"
                             style="display:block"
                             data-ad-client="ca-pub-5517858206486320"
-                            data-ad-slot="5790477697"
+                            data-ad-slot="4217675821"
                             data-ad-format="auto"
                             data-full-width-responsive="true"></ins>
                         <script>
