添加福利派页面和导航菜单

--- a/android-studio.html
+++ b/android-studio.html
@@ -139,6 +139,7 @@
                 </li>
                 <li class="nav-item mx-4"><a class="nav-link new-tag animate__animated animate__pulse animate__infinite" id="aihunt" href="https://aihunt.one">AI 工具</a></li>
                 <li class="nav-item mx-4"><a class="nav-link" id="donate" href="donate.html">捐赠</a></li>
+                <li class="nav-item mx-4"><a class="nav-link" id="donate" href="welfare-pi.html">🎁   福利𝝅</a></li>
                 <li class="nav-item dropdown mx-4">
                     <a id="drop-more" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">更多</a>
                     <div id="menu5" class="dropdown-menu" role="menu" aria-labelledby="drop-more">
