--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                     </div>
                 </li>
                 <li class="nav-item mx-4"><a class="nav-link new-tag animate__animated animate__pulse animate__infinite" id="aihunt" href="https://aihunt.one">AI 工具</a></li>
+                <li class="nav-item mx-4"><a class="nav-link" id="donate" href="welfare-pi.html">🎁   福利𝝅</a></li>
                 <li class="nav-item mx-4"><a class="nav-link" id="donate" href="donate.html">捐赠</a></li>
                 <li class="nav-item dropdown mx-4">
                     <a id="drop-more" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">更多</a>
@@ -4379,11 +4380,11 @@
                     <p><a href="http://matt-cooper.com/minimalistic-icons/">MINIMALISTIC EVERYDAY ICONS</a></p>
                     <p><a href="http://www.icons4android.com/">Icons4android一套极具人气的在线资源集合</a></p>
                 </div>
-                <div id="books-list" class="link-image-list" style="display: none">
+                <!-- <div id="books-list" class="link-image-list" style="display: none">
                     <h2 id="book-list-title"></h2>
                     <ul></ul>
-                </div>
-                <div id="fuck-gfw-list" class="float-left">
+                </div> -->
+                <!-- <div id="fuck-gfw-list" class="float-left">
                     <div class="link-image-list">
                         <h2>开启新世界大门的🔑</h2>
                         <ul>
@@ -4401,13 +4402,13 @@
                             </li>
                         </ul>
                     </div>
-                </div>
-                <div id="ad-list" class="float-left hide">
+                </div> -->
+                <!-- <div id="ad-list" class="float-left hide">
                     <h2>服务器</h2>
                     <a href="https://promotion.aliyun.com/ntms/act/vmpt/aliyun-group/home.html?userCode=j7dufdfe&utm_source=androiddevtools.cn&utm_medium=website-bottom">
                         <img src="https://wx4.sinaimg.cn/large/006tNbRwly1fwetq3nyf6j30xc0320td.jpg">
                     </a>
-                </div>
+                </div> -->
                 <!-- <div id="sponsor-list" class="float-left">
                     <h2>赞助商</h2>
                     <a class="text-center d-block" href="https://tracking.gitads.io/?campaign=gitads&repo=AndroidDevTools&redirect=gitads.io">
@@ -4878,7 +4879,7 @@
     </script>
     <!-- Recommend Books List -->
     <script type="text/javascript">
-        var isShowBookList = true;
+        var isShowBookList = false;
         var books = {
             title: "书",
             showCount: 15,
