--- a/index.html
+++ b/index.html
@@ -187,11 +187,12 @@
                         <img src="https://p.ipic.vip/reabw0.jpg">
                     </a>
                 </div>
-                <div class="swiper-slide">
+                <!-- AndroidDevTools 首页 Banner -->
+                <!-- <div class="swiper-slide">
                     <div class="ads-container">
                         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5517858206486320"
                             crossorigin="anonymous"></script>
-                        <!-- AndroidDevTools 首页 Banner -->
+                        
                         <ins class="adsbygoogle"
                             style="display:block"
                             data-ad-client="ca-pub-5517858206486320"
@@ -202,7 +203,7 @@
                             (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
                     </div>
-                </div>
+                </div> -->
             </div>
             <!-- If we need navigation buttons -->
             <div class="swiper-button-prev"></div>
