关闭弹窗广告

--- a/index.html
+++ b/index.html
@@ -4556,7 +4556,7 @@
                 "title": "Kotlin 协程实战",
                 "link": "#",
                 "image": "https://static.codefuns.tech/images/common/ad/hkj5m6.jpg",
-                "isshow": true,
+                "isshow": false,
                 "start_time": "2023-02-16 00:00",
                 "end_time": "2023-10-01 00:00"
             },
