移除失效的课程链接

--- a/index.html
+++ b/index.html
@@ -3500,11 +3500,7 @@
                     </div>
                 </div>
                 <div id="android-dev-tutorials">
-                    <h2>Android Dev Tutorials</h2>
-                    <div id="google-androidtraining-tutorials">
-                        <h4>Google Android官方培训课程中文版</h4>
-                        <p>地址：<a href="http://hukai.me/android-training-course-in-chinese/index.html">http://hukai.me/android-training-course-in-chinese/index.html</a></p>
-                    </div>
+                    <h2>Android 开发教程</h2>
                     <div id="developing-android-apps">
                         <h4>Developing Android Apps</h4>
                         <p>地址：<a href="https://www.udacity.com/course/ud853">https://www.udacity.com/course/ud853</a></p>
