修改捐赠二维码图片地址

--- a/donate.html
+++ b/donate.html
@@ -174,11 +174,11 @@
 
                 <div class="col donate-method-qr text-center">
                     <h4 id="btn-action" class="donate-method-title">BTC</h4>
-                    <img class="donate-dc-qr-img w-100" src="https://p.ipic.vip/p1sshf.jpg" />
+                    <img class="donate-dc-qr-img w-100" src="./static/image/btc_qrcode.jpg" />
                 </div>
                 <div class="col donate-method-qr text-center">
                     <h4 id="eth" class="donate-method-title">ETH</h4>
-                    <img class="donate-dc-qr-img w-100" src="https://p.ipic.vip/zcysff.jpg" />
+                    <img class="donate-dc-qr-img w-100" src="./static/image/eth_qrcode.jpg" />
                 </div>
             </div>
             <!-- 捐赠列表 -->
