add android emulator links

--- a/donate.html
+++ b/donate.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="下载 最新版 Android开发工具 ADT Bundle Android Studio AndroidStudio 2.0 Android SDK SDK Tools Gradle Android SDK下载 android sdk下载 Android Studio下载 android studio下载 Gradle下载  gradle下载 SDK Tools下载 sDK tools下载">
     <meta name="ujianVerification" content="ee5a6c5854f1826b3123039d726496c9" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.staticfile.net/bootstrap/4.6.2/css/bootstrap.min.css">
     <link href="static/css/app.css?v=20230512" rel="stylesheet">
     <link href="static/css/app-theme.css" rel="stylesheet">
     <link href="static/css/google-roboto-font-face.css" rel="stylesheet" type="text/css">
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" href="static/image/favicon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="static/image/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="static/image/apple-touch-icon-114x114.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdn.staticfile.net/animate.css/4.1.1/animate.min.css"/>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5517858206486320"
     crossorigin="anonymous"></script>
 </head>
@@ -37,6 +37,7 @@
                     <a id="drop-sdk-tools" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span>Android SDK 工具</span></a>
                     <div id="menu-sdl-tools" class="dropdown-menu" role="menu" aria-labelledby="drop-sdk-tools">
                         <a class="dropdown-item" href="index.html?id=android-studio">Android Studio</a>
+                        <a class="dropdown-item" href="index.html?id=android-emulator">Android Emulator</a>
                         <a class="dropdown-item" href="index.html?id=sdk-tools">SDK Tools</a>
                         <a class="dropdown-item" href="index.html?id=sdk-platform-tools">Platform-tools</a>
                         <a class="dropdown-item" href="index.html?id=build-tools">Build Tools</a>
