--- a/welfare-pi.html
+++ b/welfare-pi.html
@@ -9,7 +9,7 @@
     <meta name="keyword" content="Android,Android开发,Android开发工具,Android开发,Android Studio,AndroidStudio,Android Studio下载,Android SDK,Android SDK下载,SDK下载,SDK Tools,Gradle,Gradle下载">
     <meta name="ujianVerification" content="ee5a6c5854f1826b3123039d726496c9" />
     <meta name="referrer" content="no-referrer" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.staticfile.net/bootstrap/4.6.2/css/bootstrap.min.css">
     <link href="static/css/app.css?v=20230512" rel="stylesheet">
     <link href="static/css/app-theme.css" rel="stylesheet">
     <link href="static/css/google-roboto-font-face.css" rel="stylesheet" type="text/css">
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" href="static/image/favicon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="static/image/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="static/image/apple-touch-icon-114x114.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdn.staticfile.net/animate.css/4.1.1/animate.min.css"/>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5517858206486320"
     crossorigin="anonymous"></script>
     <style type="text/css">
@@ -638,6 +638,7 @@
                     <a id="drop-sdk-tools" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span>Android SDK 工具</span></a>
                     <div id="menu-sdl-tools" class="dropdown-menu" role="menu" aria-labelledby="drop-sdk-tools">
                         <a class="dropdown-item" href="index.html?id=android-studio">Android Studio</a>
+                        <a class="dropdown-item" href="ndex.html?id=android-emulator">Android Emulator</a>
                         <a class="dropdown-item" href="index.html?id=sdk-tools">SDK Tools</a>
                         <a class="dropdown-item" href="index.html?id=sdk-platform-tools">Platform-tools</a>
                         <a class="dropdown-item" href="index.html?id=build-tools">Build Tools</a>
