--- a/android-emulator.html
+++ b/android-emulator.html
@@ -192,7 +192,7 @@
 
                         <devsite-expandable is-upgraded="" id="expandable-1">
                           <p class="expand-control" aria-controls="expandable-1" aria-expanded="false" tabindex="0" role="button">Android Emulator (34.2.5) Canary
-                          <span>Jan 23, 2024</span>
+                          <span class="new-tag animate__animated animate__pulse animate__infinite">Jan 23, 2024</span>
                           </p>
                           
                           <div class="downloads">
