--- a/android-studio.html
+++ b/android-studio.html
@@ -189,7 +189,7 @@
                     <div class="all-downloads">
                       <devsite-expandable is-upgraded="" id="expandable-1" expanded="">
                         <p class="expand-control exw-expanded" aria-controls="expandable-1" aria-expanded="true" tabindex="0" role="button">Android Studio Jellyfish | 2023.3.1 Canary 11
-                          <span>February 22, 2024</span>
+                          <span class="new-tag animate__animated animate__pulse animate__infinite">February 22, 2024</span>
                         </p>
                         <div class="downloads exw-expanded-content">
                       Installers
