修改网站主题风格颜色

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         </div>
         <style>
             :root {
-                --swiper-theme-color: #6ab344;
+                --swiper-theme-color: var(--site-primary-color);
                 --swiper-navigation-size: 28px;
             }
             .swiper-container {
