add usesora link to nav

--- a/welfare-pi.html
+++ b/welfare-pi.html
@@ -635,7 +635,7 @@
               <ul class="navbar-nav align-items-center">
                 <!--  Android SDK Tools -->
                 <li class="nav-item dropdown mx-4">
-                    <a id="drop-sdk-tools" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span>Android SDK 工具</span></a>
+                    <a id="drop-sdk-tools" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span>🧰 Android SDK 工具</span></a>
                     <div id="menu-sdl-tools" class="dropdown-menu" role="menu" aria-labelledby="drop-sdk-tools">
                         <a class="dropdown-item" href="index.html?id=android-studio">Android Studio</a>
                         <a class="dropdown-item" href="ndex.html?id=android-emulator">Android Emulator</a>
@@ -660,7 +660,7 @@
                 </li>
                 <!--  Android Dev Tools -->
                 <li class="nav-item dropdown mx-4">
-                    <a id="drop-dev-tools" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Android 开发工具</a>
+                    <a id="drop-dev-tools" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">🛠️ Android 开发工具</a>
                     <div id="menu-dev-tool" class="dropdown-menu" role="menu" aria-labelledby="drop-dev-tools">
                         <a class="dropdown-item" href="index.html?id=gradle">Gradle</a>
                         <a class="dropdown-item" href="index.html?id=version-control-tools">版本控制工具</a>
@@ -695,7 +695,7 @@
                 </li>
                 <!--  Android Dev Guides    -->
                 <li class="nav-item dropdown mx-4">
-                    <a id="drop-dev-guides" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">指南</a>
+                    <a id="drop-dev-guides" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">🧭 指南</a>
                     <div id="menu-dev-guides" class="dropdown-menu" role="menu" aria-labelledby="drop-dev-guides">
                         <a class="dropdown-item" href="index.html?id=android-dev-docs">Android 开发文档</a>
                         <a class="dropdown-item" href="index.html?id=google-java-program-guide-cn">Google Java编程风格指南中文版</a>
@@ -708,7 +708,7 @@
                 </li>
                 <!--  Android Dev Tutorials -->
                 <li class="nav-item dropdown mx-4">
-                    <a id="drop-dev-tutorials" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">教程</a>
+                    <a id="drop-dev-tutorials" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">📖 教程</a>
                     <div id="menu3" class="dropdown-menu" role="menu" aria-labelledby="drop-dev-tutorials">
                         <a class="dropdown-item" href="index.html?id=developing-android-apps">Developing Android Apps</a>
                         <a class="dropdown-item" href="index.html?id=java-design-patterns-samples-in-java">Java Design Patterns Samples</a>
@@ -716,7 +716,7 @@
                 </li>
                 <!--  Design Tools  -->
                 <li class="nav-item dropdown mx-4">
-                    <a id="drop-design-tools" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">设计工具</a>
+                    <a id="drop-design-tools" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">🖌️ 设计工具</a>
                     <div id="menu4" class="dropdown-menu" role="menu" aria-labelledby="drop-design-tools">
                         <a class="dropdown-item" href="index.html?id=photoshop-plugin">Photoshop插件</a>
                         <a class="dropdown-item" href="index.html?id=vector-img-design-tools">矢量图设计工具</a>
@@ -738,13 +738,14 @@
                         <a class="dropdown-item" href="index.html?id=free-design-resources">Design Resources</a>
                     </div>
                 </li>
-                <li class="nav-item mx-4"><a class="nav-link new-tag animate__animated animate__pulse animate__infinite" id="aihunt" href="https://aihunt.one">AI 工具</a></li>
-                <li class="nav-item mx-4"><a class="nav-link" id="donate" href="welfare-pi.html">🎁   福利𝝅</a></li>
-                <li class="nav-item mx-4"><a class="nav-link" id="donate" href="donate.html">捐赠</a></li>
+                <li class="nav-item mx-4"><a class="nav-link" id="aihunt" href="https://aihunt.one">🤖 AI 工具</a></li>
+                <li class="nav-item mx-4"><a class="nav-link new-tag animate__animated animate__pulse animate__infinite" id="usesora" href="https://usesora.io" title="使用 Sora 生成 AI 视频，以及发现 Sora 生成的精彩视频">👉UseSora👈</a></li>
+                <li class="nav-item mx-4"><a class="nav-link" id="welfare" href="welfare-pi.html">🎁 福利𝝅</a></li>
+                <li class="nav-item mx-4"><a class="nav-link" id="donate" href="donate.html">💰 捐赠</a></li>
                 <li class="nav-item dropdown mx-4">
                     <a id="drop-more" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">更多</a>
                     <div id="menu5" class="dropdown-menu" role="menu" aria-labelledby="drop-more">
-                        <a class="dropdown-item" href="friends.html" id="friends">好朋友们</a>
+                        <a class="dropdown-item" href="friends.html" id="friends">🧑‍🤝‍🧑 好朋友们</a>
                         <a class="dropdown-item" href="https://github.com/inferjay/AndroidDevTools" data-title="View GitHub Project"><img width="16px" src="https://github.githubassets.com/favicons/favicon.svg" alt="GitHub" /> GitHub</a>
                     </div>
                 </li>
