fixed friends image display error

--- a/friends.html
+++ b/friends.html
@@ -254,7 +254,7 @@
                             </a>
                         </li> -->
                         <li>
-                            <a href="https://choosealicense.com/" target="_blank" title="如何选择一个开源授权协议？">
+                            <a href="https://choosealicense.cc/" target="_blank" title="如何选择一个开源授权协议？">
                                 <img src="https://i.loli.net/2019/04/28/5cc5a19a851d0.jpg" />
                             </a>
                         </li>
