--- a/friends.html
+++ b/friends.html
@@ -142,7 +142,7 @@
                     <li class="nav-item mx-4"><a class="nav-link" id="welfare" href="welfare-pi.html">🎁 福利𝝅</a></li>
                     <li class="nav-item mx-4"><a class="nav-link" id="donate" href="donate.html">💰 捐赠</a></li>
                     <li class="nav-item dropdown mx-4">
-                        <a id="drop-more" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">更多</a>
+                        <a id="drop-more" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">🔽 更多</a>
                         <div id="menu5" class="dropdown-menu" role="menu" aria-labelledby="drop-more">
                             <a class="dropdown-item" href="friends.html" id="friends">🧑‍🤝‍🧑 好朋友们</a>
                             <a class="dropdown-item" href="https://github.com/inferjay/AndroidDevTools" data-title="View GitHub Project"><img width="16px" src="https://github.githubassets.com/favicons/favicon.svg" alt="GitHub" /> GitHub</a>
